# smash_singletons

./: Cargo.toml  README.md
