[package]
name = "smash_singletons"
version = "0.1.0"
authors = ["WuBoytH"]
edition = "2018"
description = "An easy way to use singletons in your project."

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
name = "singletons"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
